<resources>
    <string name="app_name">S-extion</string>
    <string name="profile">Profil</string>
    <string name="home">Beranda</string>
    <string name="chat">Konseling</string>
    <string name="back">Back</string>
    <string name="remaja1">Materi - Perubahan Bentuk Tubuh</string>
    <string name="remaja2">Materi - Kesehatan Reproduksi</string>
    <string name="remaja3">Materi - Pendidikan Seksual</string>
    <string name="remaja4">Materi - Seks Bebas dan Risikonya</string>
    <string name="ortu1">Materi Usia 3 - 5 Tahun</string>
    <string name="ortu2">Materi Usia 6 - 9 Tahun</string>
    <string name="ortu3">Materi Usia 9 - 12 Tahun</string>
    <string name="ortu4">Materi Usia 12 - 14 Tahun</string>
    <string name="ortu5">Materi Usia 14 - 18 Tahun</string>
    <string name="pekerjaan1">Pelajar</string>
    <string name="pekerjaan2">Orangtua</string>
    <string name="riwayat">Riwayat Transaksi</string>
    <string name="editprofil">Edit Profil</string>
    <string name="nohp">+628962132221</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comingsoon">Segera dirilis!</string>
    <!--Berita materi 1-->
    <string name="judul_pk1">Pentingnya Pendidikan Seksual Sejak Dini</string>
    <string name="penulis">Oleh dr. Alvinia Hayulani, SP.KJ</string>
    <string name="isi_pk1">Banyaknya  kasus – kasus  kekerasan seksualitas  yang terjadi pada anak yang menyita perhatian kita semua dimulai dari anak kecanduan pornografi, menonton blue film, menjadi korban pemerkosaan ,mengalami pelecehan seksual berkali- kali dari anggota keluarga keluarga/ orang terdekat. Melalui siaran radio kesehatan kemenkes RI dr. Alvinia Hayulani, SP.KJ menyampaikan. Pentingnya  pendidikan seksual  kepada anak sedini mungkin,  agar anak  bisa melindungi  diri dari risiko kekerasan  dan pelecehan seksual di kemudian hari. Banyak orang tua yang sudah mulai sadar akan hal pentingnya pendidikan seksual bagi anak, namun masih banyak yang bingung harus mulai dari mana, karena seks dianggap yang cukup tabu, pendidikan seks sudah  masuk dalam kurikulum sekolah, didalam pengajaran mengenai kesehatan organ reproduksi. </string>
    <string name="bold_pk1">SIAPA YANG BERTANGGUNG JAWAB DALAM MEMBERIKAN EDUKASI?</string>
    <string name="isi2_pk1">- Langkah awal,, pengenalan seks adalah tugas orang tua \n- Untuk skala besar misalnya pemberian edukasi seks di sekolah atau acara acara tertentu boleh saja pendampingan dari ahli</string>
    <string name="isi3_pk1">Kapan waktu yang tepat untuk memulai edukasi?</string>
    <string name="isi4_pk1"> - Bisa dimulai sejak dini mungkin, misalnya dari bayi, kita biasakan menyapa anak dengan bilang” anak perempuan mama ini cantik sekali, anak laki- laki ganteng mama mandi yuk” jadi anak sudah terbiasa dengan konsep laki - laki dan perempuan.\n - Ketika anak sudah bertanya, karena ketika ketika anak bertanya anak sudah mulai berfikir dan tertarik tentang seks dan lebih cendrung untuk menyimak penjelasan ortu\n - Bisa  dimulai anak usia 3-4 tahun.</string>
    <string name="isi5_pk1">Tahapan fase psikoseksual adalah bagaimana anak tumbuh sebagai makhluk seksual, anak-anak dilahirkan sudah disertai dengan dorongan seksual, dimana melalui tahapan tersebut mereka mendapat kesengan dan energy melalui berbagai objek yang ada pada tubuh anak itu sendiri</string>
    <string name="isi6_pk1"> a. Oral: 0-1 tahun ( mulut) memperoleh kesenangan melalui aktivitas menghisap, menggigit dan mengunyah tugas menyusu, berpisah dari ibu\n b. Anal 1-3 tahun ( anus)  memperoleh kesenangan dengan menahan buang air besar tugas: toilet training \n c. Phalik 3- 5 tahun ( genital): memperoleh kesenangan daridengan memegang ara kelamin tugas:  identifikasi  jenis kelamin diri sendiri dan identifikasi terhadap individu dewasa yang  berjenis kelamin sama\n d. Latens 5- 12 tahun: mulai berinteraksi social dengan teman sebaya dan pencapaian prestasi\n e. Genital lebih dari 12 tahun: anak tertarik secara seksual pada individu lain</string>
    <string name="isi7_pk1">Langkah awal yang harus dilakukan dalam memberikan edukasi seks:\n - Edukasi dapat diberikan secara bertahap, disesuaikan dengan kebutuhan dan usia anak serta daya tangkap anak\n - Cara penyampaian yang tepat akan membuat anak lebih mudah memahami, Contoh: anak usia balita bisa menggunakan media boneka, gambar berwarna, lagu- lagu anak usia sekolah bisa mendiskusikan melalui masalah sehari- hari. \n - Mengajarkan pada anak nama anggota tubuh dan fungsinya dengan menyebutkan anggota tubuh dengan nama sebenarnya\n - Persiapan pubertas: edukasi seks, sifatnya fleksibel, tidak kaku dan sangat memungkinkan hal tersebut masuk dalam obralan sehari- hari \n Bagaimana cara mengajarkan keterbukaan pada anak\n - Komunikasi yang baik, selalu tanyakan pendapat mereka mengenai topik- topic yang ingin didiskusikan dengan pertanyaan terbuka\n - Hindari penghakiman pada anak\nMemberikan edukasi  seksual pada anak, tidak menjamin mereka akan terbebas dari resiko terkena pelecehan seksual, namun tidak memberikan edukasi justru akan membuat anak berada pada resiko yang lebih besar</string>

    <!-- berita meteri 2-->
    <string name="judul_pk2">Alasan Pentingnya Memberikan Pendidikan Seks untuk Anak</string>
    <string name="penulis2">Ditulis oleh: dr. Rizal Fadli</string>
    <string name="bold_pk2">“Pengetahuan seks sangat penting untuk diberitahukan kepada anak sejak dini. Ada beberapa alasan mengapa pendidikan seks penting untuk anak laki-laki, yaitu untuk memenuhi rasa ingin tahu anak, mencegah anak melakukan aktivitas seksual yang tidak benar, agar anak tidak terkejut saat memasuki usia pubertas, menyadarkan anak tentang menjaga organ reproduksi, dan mencegah kehamilan usia dini.”</string>
    <string name="isi_pk2">Belakangan ini kasus pelecehan ataupun kekerasan seksual semakin meningkat di pemberitaan media massa. Jumlah kasus yang terjadi pun sekarang ibarat fenomena gunung es. Kebanyakan para korban lebih memilih untuk diam. Kasus pelecehan ataupun kekerasan seksual tidak hanya terjadi pada orang dewasa, tetapi juga banyak terhadap anak-anak.</string>
    <string name="isi2_pk2">Di Indonesia, pengetahuan seks masih dianggap sebagai satu hal yang tabu untuk diberikan kepada anak-anak dan remaja. Orangtua dan orang dewasa merasa risih saat anak-anak dan remaja menanyakan hal-hal yang berkaitan dengan seks, sehingga memilih untuk mengalihkan pembicaraan.\n\nPengetahuan seks penting diajarkan sejak dini pada anak. Baik anak laki-laki maupun perempuan harus mendapatkan itu, terutama dimulai dari keluarga lebih dulu.\n\nHal ini diperlukan agar mereka mengetahui bagaimana perilaku seksual yang sehat serta mencegah terjadinya pelecehan seksual. Jangan sampai anak terlanjur mendapatkan informasi yang kurang tepat seputar seks dari sumber yang tidak dapat dipercaya, misalnya teman sebaya atau internet.\n\nAnak juga perlu tahu bahwa sebagai orangtua, kamu bisa diajak berdiskusi seputar topik tersebut. Ketika anak sudah diberikan edukasi seks atau pendidikan seksual sejak dini, di masa remaja ia pun tidak merasa canggung dan lebih bertanggung jawab terhadap dirinya sendiri.\n\nSaat berusia 3 atau 4 tahun, anak akan mulai memperhatikan dunia di sekitarnya dan  mulai belajar untuk mengenali tubuhnya sendiri dan membandingkan diri dengan teman-temannya. Anak mungkin akan mulai menyadari bahwa perempuan dan laki-laki itu berbeda. Saat anak mulai mengeksplorasi lingkungannya, ini merupakan kesempatan bagi orangtua untuk memberikan pemahaman dasar mengenai seksualitas.</string>
    <string name="isi3_pk2">Ada beberapa alasan pentingnya memberikan pendidikan seks terutama untuk anak laki-laki:\n\n• Memenuhi rasa ingin tahu anak \nSetiap anak memiliki rasa ingin tahu yang tinggi, apalagi saat memasuki usia remaja. Peran pengetahuan seks sangat penting untuk menghilangkan rasa penasaran anak. Pengetahuan seks juga dapat menjadi bekal bagi anak untuk menyaring berbagai informasi seks yang simpang-siur di luar sana.\n\n• Mencegah anak melakukan aktivitas seksual yang tidak benar\nSekarang ini banyak anak remaja yang melakukan aktivitas seksual sebelum menikah. Kebanyakan dari mereka melakukan hal ini hanya untuk coba-coba atau terpengaruh terhadap lingkungan yang tidak sehat. Bila telah mendapatkan pengetahuan seks sejak dini, diharapkan anak dapat menghindari aktivitas seksual sebelum menikah.\n\n• Agar anak tidak terkejut saat memasuki usia pubertas\nBanyak perubahan yang terjadi pada fisik anak saat memasuki usia pubertas. Hal ini terkadang membuat anak terkejut. Pada anak perempuan mengalami menstruasi pertama kali, atau anak laki-laki kali pertama kali mimpi basah. Agar anak dapat menerima perubahan ini dengan mudah, orang tua perlu memberikan pengetahuan tentang seks sejak dini.\n\n• Menyadarkan anak tentang menjaga organ reproduksi\nAnak juga perlu tahu tentang betapa penting menjaga organ kelamin agar ia tidak disentuh oleh orang lain. Anak juga perlu tahu perihal menjaga kebersihan dan kesehatan organ reproduksi. Semakin usia anak bertambah, semakin dia perlu membersihkan organ intimnya sendiri.\n\n• Mencegah kehamilan usia dini\nAngka kehamilan usia dini semakin meningkat. Hal ini disebabkan oleh pergaulan bebas pada remaja. Terkadang, para remaja melakukan hubungan intim sebelum menikah tanpa mengerti konsekuensi dari perbuatan tersebut, seperti kehamilan\n\nItulah beberapa alasan mengapa anak perlu mendapatkan pengetahuan seks sejak dini. Sebagai orangtua, kamu dapat memberikan pendidikan seks secara bertahap dengan cara yang tepat.</string>
</resources>