<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Orangtua">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="666dp"
        app:layout_constraintTop_toTopOf="parent">


        <!--            //materi 1-->
        <LinearLayout
            android:id="@+id/materi_ortu1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cyan"
            android:clickable="true"
            android:gravity="center|clip_horizontal"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/bocil3yo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/ortu1"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <!--            //materi 2-->
        <LinearLayout
            android:id="@+id/materi_ortu2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:background="@color/cyan"
            android:clickable="true"
            android:gravity="center|clip_horizontal"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/repro" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/ortu2"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <!--            //materi 3-->
        <LinearLayout
            android:id="@+id/materi_ortu3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="144dp"
            android:background="@color/cyan"
            android:clickable="true"
            android:gravity="center|clip_horizontal"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/gendericon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/ortu3"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <!--            //materi 4-->
        <LinearLayout
            android:id="@+id/materi_ortu4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="216dp"
            android:background="@color/cyan"
            android:clickable="true"
            android:gravity="center|clip_horizontal"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/hiv" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/ortu4"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <!--            //materi 5-->
        <LinearLayout
            android:id="@+id/materi_ortu5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="288dp"
            android:background="@color/cyan"
            android:clickable="true"
            android:gravity="center|clip_horizontal"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/hiv" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/ortu5"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">



        <RelativeLayout
            android:id="@+id/buttonHome"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/home"
                android:contentDescription="@string/home"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="14sp"
                android:layout_marginTop="35dp"
                android:text="@string/home"
                android:textColor="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonChat"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            >
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/chat"
                android:src="@drawable/chat"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:textSize="14sp"
                android:text="@string/chat"
                android:textColor="@color/white" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/buttonProfile"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            >
            <ImageView
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/profile"
                android:contentDescription="@string/profile"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="14sp"
                android:layout_marginTop="35dp"
                android:text="@string/profile"
                android:textColor="@color/white" />

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>